# hse-python-backend

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
lecture_1/hw/: error_handler.py  math_functions.py  math_plain_asgi.py
lecture_2/hw/: README.md  pyproject.toml
lecture_2/hw/shop_api/api/: routes.py  schemas.py  shop_models.py
lecture_2/hw/shop_api/shop/: shop_queries.py
tests/: test_homework_2.py
