[tool.poetry]
name = "hse-python-backend"
version = "0.1.0"
description = ""
authors = ["Ilya Katun <katun.ilya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.2"
requests = "^2.32.3"
grpcio = "^1.66.1"
grpcio-tools = "^1.66.1"
websockets = "^13.1"
websocket-client = "^1.8.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
faker = "^30.0.0"
httpx = "^0.27.2"
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.24.0"


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff<1.0.0,>=0.6.5",
]
test = [
    "pytest<9.0.0,>=8.3.3",
    "faker<31.0.0,>=30.0.0",
    "httpx<1.0.0,>=0.27.2",
    "async-asgi-testclient<2.0.0,>=1.4.11",
    "pytest-asyncio<1.0.0,>=0.24.0",
]

[tool.pdm.build]
includes = []
[project]
name = "hse-python-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "GlebIsrailevich", email = "glebandr05@gmail.com"},
    {name = "Ilya Katun", email = "katun.ilya@gmail.com"},
]
dependencies = [
    "uvicorn<1.0.0,>=0.30.6",
    "fastapi<1.0.0,>=0.114.2",
    "requests<3.0.0,>=2.32.3",
    "grpcio<2.0.0,>=1.66.1",
    "grpcio-tools<2.0.0,>=1.66.1",
    "websockets<14.0,>=13.1",
    "websocket-client<2.0.0,>=1.8.0",
    "pytest>=8.3.3",
    "faker>=30.8.0",
    "httpx>=0.27.2",
]
requires-python = "<4.0,>=3.12"
readme = "README.md"
license = {text = "MIT"}

