[tool.poetry]
name = "hw"
version = "0.1.0"
description = "Homework2"
authors = ["GlebIsrailevich <glebandr05@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
